# jobplatform

./: .gitignore  Dockerfile  README.md  RUNBOOK.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/v1/: urls.py
apps/accounts/: admin.py  models.py  selectors.py  services.py  signals.py
apps/applications/: __init__.py  admin.py  apps.py  models.py  selectors.py  services.py
apps/jobs/: admin.py  apps.py  models.py  selectors.py  services.py
apps/notifications/: admin.py  models.py
apps/profiles/: admin.py  apps.py  models.py  selectors.py  services.py
config/: __init__.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
core/: cache.py  exceptions.py  health.py  logging.py  middleware.py  models.py  pagination.py  permissions.py  security.py  throttles.py
infrastructure/email/: __init__.py  sender.py  templates.py
infrastructure/storage/: __init__.py  backends.py  s3.py  validators.py
infrastructure/tasks/: __init__.py  celery.py  email_tasks.py
tests/: factories.py
tests/accounts/: test_permissions.py  test_selectors.py  test_services.py  test_views.py
tests/applications/: test_email_templates.py  test_permissions.py  test_selectors.py  test_services.py  test_validators.py  test_views.py
tests/core/: test_core.py
tests/jobs/: test_permissions.py  test_selectors.py  test_services.py  test_views.py
tests/profiles/: test_services.py  test_views.py
tests/security/: test_cache.py  test_cache_integration.py  test_security.py  test_security_audit.py  test_throttling.py
(+18 files in other folders)
